--- a/note_app.css
+++ b/note_app.css
@@ -67,7 +67,55 @@ main {
   flex-direction: column;
   flex-wrap: nowrap;
   align-items: center;
+  position: relative;
 }
+
+/* note-container */
+
+#note-container {
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  width: 70%;
+  max-width: 1000px;
+  min-width: 750px;
+  background-color: #fff;
+  box-shadow: 0 0 3px #000;
+  background-color: #EDE0D4;
+}
+
+@media screen and (max-width: 768px) {
+  #note-container {
+    width: 100%;
+    min-width: auto;
+  }
+}
+
+#note-container nav {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  background-color: #7F5539;
+  color: #fff;
+  padding: 0.5rem 0.75rem;
+  font-size: 1.25rem;
+}
+
+#list {
+  padding: 0.25rem;
+}
+
+#list ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+}
+
+#list ul li {
+  padding: 0.5rem;
+  border-bottom: solid 1px #000;
+}
+
 
 /* footer */
 
